# RPL-AI-ML-Health-Diagnosis

./: README.md  package-lock.json
backend/alzheimer-reporting/: index.js  package-lock.json  package.json
backend/alzheimer-reporting/config/: Database.js
backend/alzheimer-reporting/controllers/: ReportingController.js
backend/alzheimer-reporting/models/: ReportingModel.js
backend/alzheimer-reporting/routes/: ReportingRoute.js
backend/chatbot/: Dockerfile  docker-compose.yml  main.py  models.py  pyproject.toml
backend/electronic-health-record/: main.py
backend/express/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  index.js  package-lock.json  package.json
backend/express/middleware/: auth.js
backend/express/prisma/: schema.prisma
backend/express/prisma/migrations/20240323052106_init/: migration.sql
backend/express/prisma/migrations/20240323052329_init/: migration.sql
backend/express/prisma/migrations/20240324045658_init/: migration.sql
backend/express/prisma/migrations/20240324090002_init/: migration.sql
backend/express/routes/: AdminRoutes.js  AlzheimerReportRoutes.js  AlzheimerReporting.js  AppointmentRoutes.js  DailyNewsLetterRoutes.js  DrugRoutes.js  DrugsRoutes.js  EHRRoutes.js  FeedbackRoutes.js  FetalHealth.js  FetalHealthReportRoutes.js  FetalRoutes.js  HealthEducationRoutes.js  PneumoniaReport.js  PneuomaniaReport.js  ReminderRoutes.js  RetrievalAugmented.js  ScheduleRoutes.js  TriggerRoutes.js  UserRoutes.js
backend/fastapi/: .dockerignore  .env.example  Dockerfile  database.py  docker-compose.yml  main.py  mobilenetv3.py  models.py  pyproject.toml
backend/fastapi/catboost_model/: fetal_health_classifier.cbm
backend/fastapi/routers/: alzheimer.py  auth.py  fetal.py  pneumonia.py
backend/fastapi/torch_model/alzheimer/: best_model.pt
backend/fastapi/torch_model/pneumonia/: best_model.pt
frontend/: index.html  package-lock.json  package.json
frontend/admin/: .env  index.html  package-lock.json  package.json
frontend/admin/src/: App.jsx  main.jsx
frontend/admin/src/components/: AlzheimerPredictionForm.jsx  FetalPredictionForm.jsx  Logo.jsx  MainContent.jsx  MenuBox.jsx  Navbar.jsx  PneumoniaPredictionForm.jsx  PredictionForm.jsx  ProductLogo.jsx
frontend/admin/src/hooks/: AuthProvider.jsx
frontend/admin/src/pages/: AddBlogs.jsx  AddDailyNewsletter.jsx  AddDrugs.jsx  Alzheimer.jsx  Blogs.jsx  Chatbot.jsx  DailyNewsletter.jsx  Drugs.jsx  EHR.jsx  EditBlogs.jsx  EditDailyNewsletter.jsx  EditDrugs.jsx  Feedback.jsx  Fetal.jsx  Home.jsx  Login.jsx  Navbar.jsx  Pneumonia.jsx  RAG.jsx  RetrievalAug.jsx  logo.jsx
frontend/admin/src/router/: PrivateRoute.jsx
frontend/src/: main.jsx
frontend/src/Alzheimer/: Alzheimer.jsx
frontend/src/EHR/: EHR.jsx
frontend/user/: .env  index.html  package-lock.json  package.json
frontend/user/src/: App.jsx  main.jsx
frontend/user/src/components/: Navbar.jsx  ProductLogo.jsx
frontend/user/src/hooks/: AuthProvider.jsx
frontend/user/src/pages/: AddEHR.jsx  AddFetal.jsx  AddReminder.jsx  AddSchedule.jsx  Alzheimer.jsx  Blog.jsx  Chatbot.jsx  DrugsDatabank.jsx  EHR.jsx  EditEHR.jsx  EditFetal.jsx  EditReminder.jsx  EditSchedule.jsx  Feedback.jsx  Fetal.jsx  Home.jsx  Login.jsx  Pneumonia.jsx  Reminder.jsx  Schedule.jsx
frontend/user/src/pages/EHR/: AddEHR.jsx  (+2 more)
frontend/user/src/router/: PrivateRoute.jsx
tests/: .env  .env.example  main.py  pyproject.toml  test_alzheimer.py  test_appointment.py  test_blog.py  test_customerservice.py  test_drugs.py  test_ehr.py  test_fetal.py  test_login.py  test_newsletter.py  test_pneumonia.py  test_reminder.py
(+37 files in other folders)
